--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <h1>Git Hub Tutorial</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit praesentium nihil esse quibusdam tenetur veritatis earum, dolore quaerat error, quis quo qui nesciunt, ex hic voluptates eum magni tempora quia.</p>
 </body>
 </html>
