second-branch update

--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>gitHub | tutorial</title>
+
+  <style>
+    .second-branch{
+      font-size: 50px;
+      font-weight: 700;
+      color: red;
+    }
+  </style>
 </head>
 <body>
   <h1>Git Hub Tutorial</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit praesentium nihil esse quibusdam tenetur veritatis earum, dolore quaerat error, quis quo qui nesciunt, ex hic voluptates eum magni tempora quia.</p>
+
+  <div class="second-branch">
+    <p>second branch update</p>
+  </div>
 </body>
 </html>
